# IDE-Project

code-ai-ide/: .gitignore  PROJECT_CONFIG.md  README.md  demo.md  index.html  package-lock.json  package.json  tailwind.config.js  test-file.txt  vibeconfig.json  vite.config.ts
code-ai-ide/samples/: README.md
code-ai-ide/samples/python/: main.py
code-ai-ide/samples/rust/: Cargo.toml
code-ai-ide/samples/rust/src/: main.rs
code-ai-ide/samples/typescript/: package.json
code-ai-ide/samples/typescript/src/: index.ts  taskManager.ts
code-ai-ide/samples/typescript/src/utils/: logger.ts
code-ai-ide/src/: App.tsx  index.css
code-ai-ide/src-tauri/: Cargo.toml  tauri.conf.json
code-ai-ide/src-tauri/src/: main.rs
code-ai-ide/src/components/: CommandPalette.tsx  EditorArea.tsx  Layout.tsx  MonacoEditor.tsx  Panel.tsx  ProjectConfig.tsx  Sidebar.tsx  StatusBar.tsx
code-ai-ide/src/contexts/: IDEContext.tsx
code-ai-ide/src/hooks/: useCommandRunner.ts  useFileSystem.ts
code-ai-ide/test-project/: vibeconfig.json
