[package]
name = "code-ai-ide"
version = "0.1.0"
description = "A lightweight, offline-first, AI-powered IDE"
authors = ["Code AI IDE Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "code_ai_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
